# torchax

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  build_nightly.sh  dev-requirements.txt  format.sh  pyproject.toml  test-requirements.txt
.github/workflows/: lint.yml  nightly.yml  release.yml  scorecard.yml  static.yml  unit-tests.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/javascripts/: mathjax.js
docs/docs/tutorials/: distributed_array.ipynb  distributed_array.py  trainingyt.ipynb  trainingyt.py
docs/docs/user_guide/: get-started.md  how-it-works.md  working-with-impure-functions.md
docs/source/: conf.py  contributing.rst  how_it_works.rst  index.rst
docs/source/tutorials/: basic_training_jax.rst  eager_mode.rst  lightning_training.rst
examples/: _diffusion.py  _grad_of_attention.py  basic_training.py  basic_training_jax.py  eager_mode.py  lightning_training.py  peft_lora_training.py
examples/train_llama_torchprime/: README.md  run.py
examples/train_llama_torchtitan/: Dockerfile  README.md  helper.py  splash_attn.py  train_llama.py
scripts/: update_to_nightly_version.py
test/: base_test_util.py  test_amp.py  test_checkpoint.py  test_context.py  test_conv.py  test_core_aten_ops.py  test_embedding.py  test_exports.py  test_flax.py  test_functions.py  test_image.py  test_interop.py  test_jittable_module.py  test_libraries.py  test_misc.py  test_mutations.py  test_ops.py  test_ops_out.py  test_shared_weights.py  test_symbolic_shapes.py  test_threading.py  test_tied_weights.py  test_train.py  test_unbounded_dynamism.py  test_util.py  test_view.py
test/gemma/: config.py  model.py  test_gemma.py  tokenizer.py
test_dist/: test_mesh_util.py  test_to_device.py
torchax/: __init__.py  amp.py  checkpoint.py  decompositions.py  export.py  flax.py  interop.py  mesh_util.py  tensor.py  train.py  types.py  util.py  view.py
torchax/ops/: jaten.py  jax_reimplement.py  jc10d.py  jlibrary.py  jtorch.py  jtorchvision_nms.py  mappings.py  op_base.py  ops_registry.py
