# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchax"
dependencies = [
    "jax[cpu]>=0.6.2",  # Flexible - works with newer versions
    "torch>=2.4.0",     # Flexible - works with newer versions
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "Han Qi", email = "qihan.dev@gmail.com"},
    {name = "Google Cloud Inference Team", email = "cmcs-inference-eng@google.com"},
]
description = "torchax is a library for running Jax and PyTorch together"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/google/torchax"
"Repository" = "https://github.com/google/torchax"
"Bug Tracker" = "https://github.com/google/torchax/issues"

[tool.hatch.version]
path = "torchax/__init__.py"

[project.optional-dependencies]
# Hardware-specific backends (flexible versions)
cpu = ["jax[cpu]>=0.6.2"]
tpu = ["jax[tpu]>=0.6.2"]  # Add index: https://storage.googleapis.com/libtpu-wheels/index.html
cuda = ["jax[cuda12]>=0.6.2"]
odml = ["jax[cpu]>=0.6.2"]

# Development dependencies (flexible versions for latest features)
dev = [
    "ruff>=0.9.0",
    "yapf>=0.40.0",
    "flax>=0.10.0",
    "torchvision>=0.19.0",  # For tutorials/examples
]

# Test dependencies (PINNED versions for reproducible CI)
test = [
    # Pinned PyTorch - platform specific
    "torch==2.8.0 ; sys_platform == 'darwin'",           # macOS from PyPI
    "torch==2.8.0+cpu ; sys_platform != 'darwin'",       # Linux from PyTorch index
    # Other pinned versions
    "jax[cpu]==0.7.2",
    "flax==0.10.6",
    # Test framework
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
    "pytest-reraise>=2.1.2",
    "absl-py>=2.2.2",
    "immutabledict>=4.2.1",
    "sentencepiece>=0.2.0",
    "expecttest>=0.3.0",
    "optax>=0.2.4",
    "termcolor>=2.0.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

# Training/experimentation dependencies
train = [
    "tensorboard>=2.15.0",
    "optax>=0.2.4",
]

# All dependencies for complete development setup
# Note: Install torch separately due to platform-specific builds
all = [
    "torchax[dev,test,docs,train]",
]

[tool.hatch.build.targets.wheel]
packages = ["torchax"]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"test_*.py" = ["F401", "F811"]  # Allow unused imports and redefinitions in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["test", "test_dist"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
